--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 argus-pepcli (2.2.0-1) unstable; urgency=low
 
   * Upstream version 2.2.0 for EMI-3.
+  * debian/rules: removed RPATH from usr/bin/pepcli
 
  -- Valery Tschopp <valery.tschopp@switch.ch>  Tue, 20 Nov 2012 13:36:44 +0100
 
